syntax = "proto3";
package test;
option go_package = "/gen";

//protoc --go_out=. --go-grpc_out=. test.proto

service TestService {
  rpc GetById(GetByIdReq) returns (GetByIdResp);
}

message GetByIdReq {
  uint64 id = 1;
}

message GetByIdResp {
  User user = 1;
}

message User {
  uint64 Id = 1;
  string Msg = 2;
}